(library
 (libraries openapi str re2 dream redis redis-lwt cohttp cohttp-lwt-unix uri)
 (name featsOfDistanceLib)
 (preprocess
  (pps ppx_yojson_conv lwt_ppx ppx_deriving.show)))

(include_subdirs unqualified)

(env
 (dev
  (flags
   (:standard -w -66-27-30-32-33)))
 (prod
  (flags
   (:standard -O3))))
