(rule
 (targets libcallable_rust.a dllcallable_rust.so)
 (deps
  (source_tree .))
 (action
  (no-infer
   (progn
    ;  (run echo "running cargo build...")
    ;  (run cargo build)
    ;  (run echo "cargo build run successfully")
    (run
     sh
     -c
     "cp target/debug/libcallable_rust.so ./dllcallable_rust.so 2> /dev/null || cp target/debug/libcallable_rust.dylib ./dllcallable_rust.so")
    (run cp target/debug/libcallable_rust.a ./libcallable_rust.a)
    (run echo "dll copy run successfully")))))

(library
 (name callable_rust)
 (c_library_flags -lpthread -lc -lm)
 (foreign_archives callable_rust))
